Fix dark mode + videos per admin page

--- a/app/static/global.css
+++ b/app/static/global.css
@@ -9,11 +9,6 @@ html {
     overflow-x: hidden
 }
 
-body {
-    color: #bbb;
-    background: #1f1f1f;
-}
-
 .rating {
     justify-content: center
 }
@@ -23,10 +18,6 @@ body {
     flex-direction: row-reverse;
     align-items: center;
     justify-content: center
-}
-
-a {
-    color: cornflowerblue;
 }
 
 .buttons a {
@@ -60,10 +51,6 @@ hr {
     margin: .5rem
 }
 
-.form-control {
-    color: #bbb !important;
-}
-
 .form-btn {
     margin: .5rem 0 0 0;
     flex-direction: column-reverse;
@@ -73,7 +60,7 @@ hr {
 .tohome:active>h1,
 .tohome:hover>h1,
 .tohome:visited>h1 {
-    color: #bbb;
+    color: var(--bs-body-color);
     text-decoration: none
 }
 
